<resources>
    <string name="app_name">V-Card</string>

    <string name="title_signin">Sign In</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_verification">Verification</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_vcard">vCard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_my_info">My Info</string>
    <string name="title_edit">Edit</string>
    <string name="title_qr">QR</string>
    <string name="title_add">+</string>

    <!--Content Description-->
    <string name="desc_logo">Logo</string>
    <string name="desc_background">Background</string>

    <!--Button Label-->
    <string name="btn_signin">Sign In</string>
    <string name="btn_register">Register</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_create">Create</string>
    <string name="btn_create_account">Create Account</string>
    <string name="btn_verification">Verification</string>


    <!--Label Text-->
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_vcard_id">vCard Id</string>
    <string name="lbl_select_country">Select Country</string>
    <string name="lbl_resend">Resend</string>
    <string name="lbl_my_vcard">My vCards</string>
    <string name="lbl_choose_contact">Choose Contact</string>
    <string name="lbl_create_new_contact">Create New Contact</string>
    <string name="lbl_sort_by">Sort By</string>
    <string name="lbl_ascending">Ascending</string>
    <string name="lbl_descending">Descending</string>
    <string name="lbl_debug">Debug</string>
    <string name="lbl_help_and_support">Help &amp; Support</string>
    <string name="lbl_signout">Sign Out</string>


    <!--Text-->
    <string name="text_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Torquatus, is qui consul cum Cn. Igitur neque stultorum quisquam beatus neque sapientium non beatus. Quid, si non sensus modo ei sit datus, verum etiam animus hominis? Quodsi ipsam honestatem undique pertectam atque absolutam. </string>
    <string name="text_terms_service">Tap \' Agree &amp; Continue\' to Accept the vCard Terms of service and Privacy Policy</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_others_wiil">Others will be able to find you by phone\n number (if you decide to add it)</string>
    <string name="text_agree_and_continue">Agree &amp; Continue</string>
    <string name="text_by_tapping_create_account" translatable="true">By tapping create account you are agreeing \nto the Terms of service and Privacy Policy</string>
    <string name="text_a_passcode_has">A Passcode has been sent to your phone.\nPlease Enter 6-digit verification code below.</string>
    <string name="text_use_existing_contact">Do you want to use existing contact for My vCard?</string>

</resources>
