<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <android.support.v7.widget.Toolbar
        style="@style/WidgetToolbar">

        <ImageButton
            style="@style/ToolbarIconBack"
            android:id="@+id/ibBack" />

        <TextView
            style="@style/ToolbarTitle"
            android:text="@string/title_signup" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            style="@style/EditTextCustom"
            android:id="@+id/etEmail"
            android:hint="@string/lbl_email"
            android:inputType="textEmailAddress"/>

        <EditText
            style="@style/EditTextCustom"
            android:id="@+id/etFirstName"
            android:hint="@string/lbl_first_name" />

        <EditText
            style="@style/EditTextCustom"
            android:id="@+id/etLastName"
            android:hint="@string/lbl_last_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_36dp"
            android:gravity="center"
            android:text="@string/text_others_wiil" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_36dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/btn_create_account"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"/>

    </LinearLayout>
</LinearLayout>