<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <android.support.v7.widget.Toolbar
        style="@style/WidgetToolbar">

        <ImageButton
            style="@style/ToolbarIconBack"
            android:id="@+id/ibBack" />

        <TextView
            style="@style/ToolbarTitle"
            android:text="@string/title_signup" />
    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                style="@style/EditTextCustom"
                android:id="@+id/etvCardId"
                android:hint="@string/lbl_vcard_id" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/EditTextCustom"
                    android:id="@+id/tvCountryName"
                    android:drawableEnd="@drawable/ic_chevron_right_black"
                    android:text="@string/lbl_select_country" />

                <!--<Spinner
                    android:id="@+id/spinCountry"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignBottom="@+id/tvCountryName"
                    android:clickable="true"
                    android:layout_marginLeft="@dimen/values_10"
                    android:layout_marginRight="@dimen/values_10"
                    android:paddingBottom="@dimen/values_16"
                    android:paddingRight="@dimen/values_10"
                    android:paddingTop="@dimen/values_16"
                    android:visibility="invisible" />-->
            </RelativeLayout>

            <EditText
                style="@style/EditTextCustom"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:hint="@string/lbl_password" />

            <EditText
                style="@style/EditTextCustom"
                android:id="@+id/etConfirmPassword"
                android:inputType="textPassword"
                android:hint="@string/lbl_confirm_password" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/_75dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:text="@string/btn_create"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center"
                android:text="@string/text_by_tapping_create_account" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>