<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <android.support.v7.widget.Toolbar
        style="@style/WidgetToolbar">

        <ImageButton
            style="@style/ToolbarIconBack"
            android:id="@+id/ibBack" />

        <TextView
            style="@style/ToolbarTitle"
            android:text="@string/title_verification" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:gravity="center"
            android:text="@string/text_a_passcode_has" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50dp"
            android:layout_marginLeft="@dimen/_24dp"
            android:layout_marginRight="@dimen/_24dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <EditText
                style="@style/EditTextVerification"
                android:id="@+id/etVerification1" />

            <EditText
                style="@style/EditTextVerification"
                android:id="@+id/etVerification2" />

            <EditText
                style="@style/EditTextVerification"
                android:id="@+id/etVerification3" />

            <EditText
                style="@style/EditTextVerification"
                android:id="@+id/etVerification4" />

            <EditText
                style="@style/EditTextVerification"
                android:id="@+id/etVerification5" />

            <EditText
                style="@style/EditTextVerification"
                android:id="@+id/etVerification6" />

        </LinearLayout>

        <Button
            android:id="@+id/btnVerification"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginLeft="@dimen/_24dp"
            android:layout_marginRight="@dimen/_24dp"
            android:text="@string/btn_verification"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tvResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/lbl_resend"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
</LinearLayout>